[package]
name = "wixen-config"
description = "TOML + Lua configuration, hot-reload, and schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
mlua.workspace = true
tracing.workspace = true
thiserror.workspace = true
schemars = { version = "1.2.1", features = ["derive"] }

[dev-dependencies]
proptest = "1.10.0"
