[package]
name = "wixen-render"
description = "GPU renderer (wgpu), glyph atlas, DirectWrite text shaping"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wixen-core = { path = "../wixen-core" }
wgpu.workspace = true
softbuffer.workspace = true
windows.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
raw-window-handle.workspace = true
pollster.workspace = true
bytemuck.workspace = true
image.workspace = true
serde.workspace = true
